--- a/.github/workflows/SCA-scan.yml
+++ b/.github/workflows/SCA-scan.yml
@@ -20,5 +20,7 @@ jobs:
       continue-on-error: true
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+       args: test
 
     
